# build-injection-example

./: README.md  pyproject.toml
.github/workflows/: release.yaml
src/hello_pkg/: __init__.py  cli.py
src/my_pkg.egg-info/: PKG-INFO  SOURCES.txt
