
[project]
name = "hello-pkg"
version = "0.1.2"
description = "A tiny example package that prints a greeting"
readme = "README.md"
requires-python = ">=3.8"

authors = [{ name = "Foundations of Cybersecurity", email = "@unipv.it" }]

# If you have runtime deps, put them here:
dependencies = []

# Create a console command called `hello`
[project.scripts]
hello = "hello_pkg.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
